fix[monitor]: Monitor listo para pintar cosas

--- a/src/monitor/styles.css
+++ b/src/monitor/styles.css
@@ -64,3 +64,9 @@ button:hover {
 .log .details {
     margin-left: 10px;
 }
+
+canvas {
+    width: 100%;
+    max-width: 600px;
+    height: 400px;
+}
